Right click context menu can't be closed inside some Wayland windows (touchpad)
Steps to reproduce
- Open nautilus or gedit in a Wayland session
- Open a context menu by clicking the right touchpad button (on a folder or inside a textfile)
- Click the left touchpad button in the area left of or above the context menu
Current behavior
The context menu does not always close, even though the mouse pointer is clearly not inside the context menu. This does work as expected in Xorg sessions, but not with Wayland.
Expected outcome
The context menu should always be closed if a touchpad button is clicked outside of it.
Version information
- Gnome 3.28
- Fedora 28
Additional information
I'm not sure if this is a GTK bug, if it isn't please move to the appropriate project.
This bug does only seem to happen with a touchpad, I don't have two laptops though, so I can't test it with another one. It also doesn't happen in every Wayland window, for example inside gnome-terminal it works as expected.